--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,9 +24,12 @@
     ]
   },
   "angularCompilerOptions": {
-    "enableI18nLegacyMessageIdFormat": false,
+    "enableI18nLegacyMessageIdFormat": true,
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
-    "strictTemplates": true
+    "strictTemplates": true,
+    "strictPropertyInitialization" : false,
+    "suppressImplicitAnyIndexErrors": true,
+    "fullTemplateTypeCheck": true
   }
 }
